# auto-screen

./: .gitignore  CLEF and SYNERGY Datasets.ipynb  First Pipeline.ipynb  README.md  Second Pipeline.ipynb  Training.ipynb  data.py  datasets.py  metrics.py  modules.py  pyproject.toml  signatures.py
